# caellian.github.io

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  CNAME  LICENSE  README.md  babel.config.js  build_icons.sh  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1704066176528-e6f22576367af.mjs
.github/workflows/: update.yml
.svelte-kit/output/: manifest.json
art/fonts/: KiwiMaru.css  KiwiMaru.styl  Quicksand.css  Quicksand.styl  RANGES
blog-builder/: main.js  package-lock.json  package.json  rehype-codeblocks.js
css/: app.19a77a31.css  app.8245df73.css  app.d54dc17a.css
highlight/: .gitignore  Cargo.toml  index.d.ts  index.js  is_built  package-lock.json  package.json
highlight/extensions/: rust_highlight.scm
highlight/src/: lib.rs
js/: app.1bf283e7.js  app.1bf283e7.js.map  app.4a65fc40.js  app.4a65fc40.js.map  app.b293ce96.js  app.b293ce96.js.map  app.e9e5205d.js  app.e9e5205d.js.map  chunk-vendors.03d63135.js  chunk-vendors.03d63135.js.map  chunk-vendors.cdf65a48.js  chunk-vendors.cdf65a48.js.map  chunk-vendors.e61beae3.js  chunk-vendors.e61beae3.js.map
public/: index.html
sass/: _base.scss  _foot.scss  _nav.scss
scripts/: build-icons.py  hook-build-icons  install-hooks  update_languages.py
src/: Portfolio.vue  app.d.ts  app.html  hooks.d.ts  hooks.server.js  main.ts
src/assets/: old-projects.json  projects.json
src/components/: ArticleSummary.svelte  Comment.svelte  Comments.svelte  Compass.svelte  CopyButton.svelte  Donut.svelte  (+21 more)
static/: CNAME  robots.txt
(+147 files in other folders)
