[package]
name = "highlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter-highlight = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-css = "0.20"
tree-sitter-regex = "0.20"
napi = "2"
napi-derive = "2"

thiserror = "1.0"

[build-dependencies]
napi-build = { version = "2" }

[profile.release]
opt-level = 3
lto = true
